added few tangos and misc.

--- a/ytube/_data/lists/AI-keys.yml
+++ b/ytube/_data/lists/AI-keys.yml
@@ -1,6 +1,8 @@
 --- 
 - BrNs0M77Pd4 # Artificial Intelligence: it will kill us | Jay Tuck | TEDxHamburgSalon
 - Njbze8cS8WE # How Technology Will Take Your Job and Create God
+- 01ofjPtBlk4 # In 5 Years Robots Will Take Your Job! What Then?
+- vxI7i-ycyG8 # THIS WILL LITERALLY BLOW YOUR MIND! Bruce Lipton Shocked The Audience With This Story!
 - TFk_w_N2xXM # The Elephant in the Brain | Robin Hanson | TEDxAsburyPark
 - mQO2PcEW9BY # A.I. is Progressing Faster Than You Think!
 - LPT4r4AnFZA # The inevitable merger of IQ and EQ in technology - Rana el Kaliouby (Affectiva)
