--- a/ytube/_data/lists/blockchain-keys.yml
+++ b/ytube/_data/lists/blockchain-keys.yml
@@ -1,4 +1,5 @@
 --- 
+- kP6EezXJKNM # How Blockchain is Already Taking Over (YouTube Competitors, Finance and More)
 - hTfSHJGyIG8 # What is Hedera Hashgraph?
 - yxWbiPY2hko # Robot AI has a new announcement for Humanity
 - -qZvVPgHCag # Swarm Fund in 120 seconds
