--- a/ytube/_data/lists/capitalism-keys.yml
+++ b/ytube/_data/lists/capitalism-keys.yml
@@ -1,5 +1,7 @@
 --- 
 - 3WBlqDeHiXI # Globalized capitalism explained through bananas | DW Documentary
+- pBffKzWECUQ # The Amazon monopoly and the problem with Jeff Bezos' business model
+- quTUTUNdZx4 # Libra - Zuckerberg's dangerous cryptocurrency lie
 - CRE87BLnAaQ # Le LAIT - Ce con ne nous dit pas #3
 - X2LwIiKhczo # The Spectacular Rise and Fall of WeWork 
 - odKmGEU57ZQ # La face cachée du billet de 500 euros
