--- a/ytube/_data/lists/conspiracy-keys.yml
+++ b/ytube/_data/lists/conspiracy-keys.yml
@@ -4,6 +4,7 @@
 - GILWsn2Fm5M # THE TIME HAS COME....
 - nfCysUROIU4 # 5 CRAZIEST Illuminati Conspiracy Theories
 - _towtIaH1-U # Celebs Who Sold Their Souls For A Paycheck
+- klXj198vY4A # "It Will Be The End Of Energy Companies" | The FORBIDDEN Technology of Nikola Tesla
 - feFFZJGq6C4 # The Apollo Conspiracy: A Film by Richard Hall
 - GwupU2eKNDM
 - H-drAmHOaig # THE FINAL NAlL IN &quot;SATANlST&quot; WILL FERRELL&#39;S COFFlN....
@@ -19,5 +20,6 @@
 - mRjqzBCrTHY # Anonymous - Everyone Must See This Before it is Deleted! (2018-2019)
 - vAKDB4Wdcrc # Evidence Grows that Hawaii Volcanic Eruption Caused by Puna Geothermal Venture
 - W7nt5FynDw8 # RFID, Blockchain, AI, Bitcoin - The Truth Will Shock You!
+- ejaGzxEevGI # MK Ultra: The CIA's Mind Control Fiasco | Answers With Joe
 - F-kQ9jeSxnE # National Geographic: Area 51 The CIA&#39;s Secret Files
 - JCvG463pVpM # The Weather Is Changing Full HAARP Chemtrail Documentary 2014 HD new HD documentary
