--- a/ytube/_data/lists/downloaded-keys.yml
+++ b/ytube/_data/lists/downloaded-keys.yml
@@ -1038,3 +1038,26 @@
 - ROW9F-c0kIQ
 - Kykj3k2wBXg
 - 3YU67IiQH9Y # 11/22/19
+- beLXeGRzNfA # 11/23/19
+-  # 11/23/19
+- qkN8gYXiXdI # 11/23/19
+- 01ofjPtBlk4 # 11/23/19
+- iNU895fTzSQ # 11/23/19
+- ?t=53 # 11/25/19
+- wDZgzsQh0Dw # 12/06/19
+- kag0aJqQsGo # 12/12/19
+- -vvpsIiUVKY # 12/13/19
+- NvZtkt9973A # 12/14/19
+- 3MDtC3Ngjlg # 12/14/19
+- XI5frPV58tY # 12/14/19
+- LFGsZ6ythQQ # 12/14/19
+- dCbufxhSVc8 # 12/14/19
+- ZbZSe6N_BXs # 12/14/19
+- 59Q_lhgGANc # 12/14/19
+- OPf0YbXqDm0 # 12/14/19
+- GsrIZ1mnOvU # 12/14/19
+- g5kab2Crchs # 12/14/19
+- pd4j9osCNT4 # 12/14/19
+- 894OafVuAAE # 12/15/19
+- 7cAbmaBHIFU # 12/15/19
+- bBmBE2XNWGo # 12/15/19
