--- a/ytube/_data/lists/fintech-keys.yml
+++ b/ytube/_data/lists/fintech-keys.yml
@@ -1,6 +1,7 @@
 --- 
 - _wmGzKjEYvU
 - QpaTOvAhLR4 # DEVCON1: Digital Identity - Christian Lundkvist
+- nuRuFj5c0bE # Why you are wrong about Universal Basic Income | The power of AI within the hands of the few
 - 8d4Of_17lP4 # BitPay – Accept Bitcoin Payments
 - t6m49vNjEGs # How the rich get richer – money in the world economy | DW Documentary
 - XUQJvMALfUA # Distributed Consensus Making Impossible Possible - Heidi Howard - JOTB16
