--- a/ytube/_data/lists/gurus-keys.yml
+++ b/ytube/_data/lists/gurus-keys.yml
@@ -7,11 +7,10 @@
 - S1sZNbRH2N8 # Swami Rama the Himalayan Master, part 1A
 - e_HgOsAU5_I # Ramana Maharshi Talks -Teachings In His Own Words - Audiobook - Lomakayu
 - bcKmSi8JWCw # Amma, celle qui étreint le monde
-- I098n_9LPP4 # Ask Me Anything: Sadhguru
 - k2GgJOCzf0Y # Mooji - "Something is taking care of you, trust that…"
 - epM2ip9rKlA # RAMANA MAHARSHI "TALKS" PART THREE - TEACHINGS IN HIS OWN WORDS - lomakayu
 - Y0XhhKbnVUY # Mahavatar Babaji-Mantra Meditation- Babaji Mantra
-- YZXPawOLGKc # Is mind reading possible ? | Swami Mukundananda & Sadhguru answer\
+- GK7L8z1ihBo # We Can Overcome All Attachments
 - Tf8PUAG2aYU # OSHO: There Is No Tomorrow
 - AhOhgEeMAcg # Mahavatar Babaji - The Definitive Documentary of Babaji - An Immortal Master
 - Gw1I7fqmxmA # This Indian Mystic Drops KNOWLEDGE BOMBS (I’m Speechless!) | Sadhguru on Impact Theory
