--- a/ytube/_data/lists/healing-keys.yml
+++ b/ytube/_data/lists/healing-keys.yml
@@ -1,13 +1,19 @@
 --- 
+- 1w0_kazbb_U # Shattering cancer with resonant frequencies: Anthony Holland at TEDxSkidmoreCollege
 - McF3r7arhmc # Physics Of Crystals by LesBrown
+- V4gTyHbBYEc # Sadhguru: "Millions of People Have Changed Their Lives Because Of It"
+- mBL9pS6GMdA # We've Found The Magic Frequency (This Will Revolutionize Our Future)
+- wDZgzsQh0Dw # Music Medicine: Sound At A Cellular Level | Dr. Lee Bartel | TEDxCollingwood
 - _TokqrtFfi8 # The Most Powerful Strategy for Healing People and the Planet | Michael Klaper | TEDxTraverseCity
 - J-I2eScPkEw # How healthy living nearly killed me | AJ Jacobs
 - 8YENYsKnI7E # Guided Sleep Talkdown: Deep Sleep for Busy Minds and Anxiety Guided Meditation and Self-Hypnosis
 - hCKU4JFEmGI # The Iceman | Wim Hof claims his sub-zero treatment can cure illness | Sunday Night
 - BFbCYOfxOnI # Nassim Haramein Unified Field Theory / Theory of Everything [FULL VIDEO]
+- qszsMyrChnE # This is Why All Billionaires Wake Up EXACTLY at 4:00 AM
 - 3soroEZ3yBk # Sadhguru - Learn How To Sleep Correctly | TRY IT TONIGHT!
 - YhDB37KwNv8 # Zero Point Energy Healing tools - Part 2
 - XT5hoymUjio # Quantum Healing - Anything Is Possible!  Part 1
+- 82ShSNuru6c # Bruce Lipton The Biology of Belief Full Lecture
 - xexh4DUQWT4 # matrix 2 point new
 - BxOw3Zy_GxA
 - 2ULFDHVoq70 # Reversing Blindness
@@ -46,4 +52,5 @@
 - Wlbnar1HrPQ # Covidence webinar (complete 1hr) Tuesday 1 March (pm slot)
 - Gu-F5-oIpUM # Insomnia: The Different Kinds & A Few Solutions | Sadhguru
 - htCe7qytORQ # DARPAN - Accueillir une couche de peine (extrait)
+- wLBAuy619qw
 - GUbEgg6GklU # Gregg Braden, Bladder Cancer dissolves in less than 3 minutes using The Language of Emotion
