--- a/ytube/_data/lists/leadership-keys.yml
+++ b/ytube/_data/lists/leadership-keys.yml
@@ -1,6 +1,8 @@
 --- 
 - j7ff9vBeo_Y # Power 2017 Workshop | Think Out Loud With Jay Shetty
 - CWKEDKAbQus # Why Being Too Nice Leads To Rejection - Marisa Peer
+- GwH4cEOICGg # "You're almost the opposite of a soldier" Jordan Peterson on Entrepreneurs and Openness
+- 7xmGi9UzVIY # "60 Seconds for 7 Days" | Dr. Bruce Lipton
 - JWmafBBMHSk # How to spot a leader in their handwriting | Jamie Mason Cohen | TEDxUBIWiltz
 - fG3EUMArrU0 # How To Find And Pursue Your Passion | Think Out Loud With Jay Shetty
 - OTXUPaQ7EJU # Simon Sinek - Renowned Leadership Expert | Author of Start With Why
@@ -9,6 +11,7 @@
 - VCFB4jSgTMw # What Do You Desire? Thought Provoking Motivation: By Alan Watts
 - znwRzsYLr6s # One of the Most Motivational Videos You&#39;ll Ever See  [WARNING!!! - Belief Changer]
 - As8XkJNaHbs # BEST SPEECH EVER - Simon Sinek on Millennials in the Workplace | SO INSPIRING!
+- iNU895fTzSQ # "Getting Rich Is Easy" | START DOING THIS TODAY! Sadhguru
 - xp2qjshr-r4 # RETRAIN YOUR MIND - NEW Motivational Video (very powerful)
 - jC4QLEWMGQc # Oser, c&#39;est gagner ! | Rémi CAMUS | TEDxOrléans
 - UQrPVmcgJJk # The rarest commodity is leadership without ego: Bob Davids at TEDxESCP
