--- a/ytube/_data/lists/medit-keys.yml
+++ b/ytube/_data/lists/medit-keys.yml
@@ -3,6 +3,7 @@
 - XplRXNxPLEY # Alan Watts - Tap Into Your True Self | 432hz | Frequency Meditation
 - ausD8Z422as # Dhafer Youssef - Khira "Indicium Divinum" (Elegy for my mother)
 - 8sYK7lm3UKg # OM Chanting @417 Hz | Removes All Negative Blocks
+- 0sbRipuelcc # 
 - TAESZsLJdVw # Crystal Chakra Meditation with Antique Tibetan Singing Bowls
 - Nnztjp7rSlc # 🔴 Beautiful Piano Music: Relaxing Music, Study Music, Sleep Music, Meditation Music
 - BxOw3Zy_GxA # 174 Hz || PAIN RELIEF SLEEP MUSIC || Deep Healing Music based on Solfeggio Frequencies
@@ -105,6 +106,7 @@
 - uszJsoOUPZQ # Relaxing Spa Music, Calming Music, Relaxation Music, Meditation Music, Instrumental Music, ☯3100
 - -8N9UR6OTCs # BRAIN HEALING SOUNDS : HEALED MILLIONS ALREADY : MUST TRY !
 - pTeH3wGOZ84 # Peru Amazon Ayahuasca Shamanic Songs
+- K4t5FquwZCM # 30 MINS WHO AM I GUIDED MEDITATION BY THE WORLD'S GREATEST SAGE ✔✔
 - tByJMiQp-IM # Music to Cleanse of Negative Energy at Home Space.
 - 28wBrNjHXOM # Shamanic drum &amp; Didgeridoo Hypnotic Meditation music - 35min
 - AeIcUeRaXf8 # TANTRIC lOVE MUSIC
@@ -123,6 +125,7 @@
 - bSBwNJpiJGw # Tantric Kundalini Yoga Meditation | Stimulates the Kundalini  | cosmic energy
 - 5nLJOeZ4uaI # 10 Minute Guided Morning Sunrise Meditation
 - RgqxZU6_qOY # Tibetan Healing Sounds - Singing Bowls - Natural sounds Gold for Meditation &amp; Relaxation
+- oNHoqLKGAuI # The Most Beautiful,Soothing Vocals:Healing Meditation Music by: Sudha - Moola Meditation [HQ]
 - y75amBSQ7DQ # Tantric Yoga Music: Stimulates the Kundalini | Isochronic Tones | Binaural Beats
 - 7IN071w7F00 # [ Just 3 seconds ] and deep sleep immediately with delta brainwaves music
 - DGQ1kzBoImY # Tibetische Meditationsmusik, Entspannende Musikmeditation, Yoga, Binaurale Takte, ✿3186C
