--- a/ytube/_data/lists/music-keys.yml
+++ b/ytube/_data/lists/music-keys.yml
@@ -1,6 +1,15 @@
 --- 
+- aKJvbTEnp0I # LIGHT IN BABYLON - Hinech Yafa - Istanbul
 - HV4YGZ4MWdY # Morven Brown - Back To Black
+- _7wKjTf_RlI # Max Cooper - Order From Chaos (official video by Maxime Causeret)
 - zYIRHfaxYg0 # Stress - Diablo ft. DJ A-Boom
+- Sw4s2hB9htg # Teho - Arif (Original Mix)
+- r97bzs3fyTY # Anoushka Shankar - Bhairavi - Live from Girona
+- wTQxiGJzR_I # Lola Marsh - She's a Rainbow
+- UPcPtd3k-Qg # London Grammar - Truth Is a Beautiful Thing (Lyric Video)
+- oygrmJFKYZY # Dua Lipa - Don't Start Now (Official Music Video)
+- G-UnzRM24IM # HAIM - Now I'm In It
+- 0xLv1OTYXEI # Lullaby - cover The Cure by Grand Square Dance
 - Ty9-E8_rmBw # Sia - Unstoppable (Wallmers & Geonis Remix)
 - tNpXNQ65gsA # Jacques Brel - Une valse a mille temps (with lyrics for karaoke)
 - Vkhi_hDD6ys # ENIGMA Of His Eyes The Peace (New Song 2018) Shinnobu
@@ -8,15 +17,19 @@
 - KdS6HFQ_LUc # Rihanna - S&amp;M
 - f0-fPwuPpAk # Khooneye Ma - Marjan Farsad
 - mBNm4W3LRw4 # خونه ی ما - مرجان فرسادMarjan Farsad - Our Home (Translated Lyrics)
+- GsFZh0riB20 # Eric Prydz — Opus (Tomorrowland Orchestra Version)
 - 1kYN1qn_W3I # Within Temptation - Let Us Burn
 - TCnrXsGYgU0 # Клип на песню: Yard Sale( аватария)
 - 2Oo8QzDHimQ # Alice Cooper - School&#39;s Out (from Alice Cooper: Trashes The World)
 - fOIW1yIyHF8 # ZAZ - La lessive
+- HrAMuTCS21M # Ängie - Here For My Habits / Venus in Furs
 - 2ekdIJoxaos # Orelsan A plus dans l&#39;bus intégrale
+- u00iWRwFfSU # Lana Del Rey - Cola
 - XqAiGeEzctQ # Angèle - Oui ou Non [CLIP OFFICIEL]
 - HzjE33U_gy8 # Guadalupe Pineda  - Historia De Un Amor
 - YHc-c9hJMrU # KOBRA AND THE LOTUS - You Don&#39;t Know (Official Video) | Napalm Records
 - Ubi1m5pR3hM # DELAIN - Stardust (Official Video) | Napalm Records
+- FgrwgGIdoOo # London Grammar - Oh Woman (Official Video)
 - ysBF0cBAmrk # un pére chimene badi
 - NrIL-0AtDY4 # Hans Zimmer_ Now we are free /The Horse Whisperer/ fanmade
 - ''
@@ -93,6 +106,7 @@
 - UiHmeHZAc0s # JT Coldfire - She&#39;s Crazy
 - UKRLY9EptCY # Violin piano, Dubstep, Extended Edition, 20 Minutes,
 - qEltAUYlV4Q # 1 Hour! This is the Most Beautiful Music in the world. Amazing! Look!!
+- vWD7k6TrJ-g # Chromatics - Tick Of The Clock
 - FpeOZqcJHgI # Royal Messenjah ft. Joss Stone - The Gambia
 - c0NLX8sETUs # MONICA BELLUCCI. TI AMO
 - RAg4VmBY7so # malaria - kaltes klares wasser
@@ -1120,19 +1134,27 @@
 - Lu_44YF4904 # Silvy doet de temperatuur stijgen met &#39;Declaration Of Love&#39; | Liefde Voor Muziek
 - NUuInD9HLaE # Within Temptation - Sinéad (Official Music Video)
 - NPH9j0qVM3A # Alice Phoebe Lou - She (Live)
+- jqhgXAGP4Ho
+- gcU8FaeApdU # [INTIMATE PERFORMANCE - DUA LIPA] PART 1: BLOW YOUR MIND (MWAH)
+- RbUMKenn5l8 # London Grammar - Big Picture (Official Video)
 - Ys5xfdn5rlo # Dead Can Dance - Song of the Stars (Pina version)
 - suwRg7tYSfM # HOW MEDIA SHAPED THE GENERATIONS: Do what thou Wilt (Sex, Drugs, and Aliens) 2017
 - hBKwtvnfYZA # 11:57 Official Trailer
 - esEdC0c3YI4 # Garbage - Only Happy When It Rains (official music video) with lyrics
 - DjrKL3cPsU0 # Vinicio Capossela - Scivola Vai Via
 - IWIbdQ0K88A # YouTube
+- "-rKwPblSdQA" # Ruelle ft. Fleurie - Carry You (Official Video)
 - r1ATFedwjnk # Nero - Guilt
 - 6oT8ReF5rjE # Sia Performs &#39;Bird Set Free&#39;
 - 5ZZxiMLEXzw # Claude Challe &amp; Friends ~~L&#39;ombre De Tes Cils~~
+- WGfQDrXHEwk # BLOW - Fall In Deep (Official Music Video)
 - dc-nyGo0aC8 # Clean Bandit -  Tears ft. Louisa Johnson [Official Video]
 - Ku1HJ2DI7Xk # DEAD CAN DANCE - PERSEPHONE
 - UPsSoTozzdU # Andres Linetzky &amp; Ernesto Romeo - Sentimientos
+- OUYBCdmtXq4 # Dua Lipa - Genesis - Glastonbury - Remaster 2018
 - 0Sum_pDOiyI # J Marie Cooper performs &#39;Mamma Knows Best&#39; - The Voice UK - Blind Auditions 1 - BBC One
+- ECZQUg6-TlU # The Storm
+- zEroIpr2Yes # Ibn' Arabi - 'Alone with the Alone': Henry Corbin
 - nCw0wlv3pyQ # Caro Emerald - Mistaken identity
 - EZMOh9TglsI # Emeli Sandé - Hurts - Live at the BRIT Awards 2017
 - CC6vDsm1dXQ # Ella Henderson sings Evanescence&#39;s Bring Me To Life - Live Week 4 - The X Factor UK 2012
