--- a/ytube/_data/lists/nogafa-keys.yml
+++ b/ytube/_data/lists/nogafa-keys.yml
@@ -5,3 +5,4 @@
 - shcWB5iU0Sc # How To De-Googlify Your Life! A Guide To The Best Alternatives
 - zNSp-kzVVhU # I Tried Blocking Amazon From My Life | Blocking Tech Giants: Week 1
 - WoAhf_qwLDM # How To DELETE Google From Your Life!
+- vZBa5-wFAfQ # WHY YOU NEED TO STOP USING GOOGLE | How Google monopoly threatens everything | #don'tbeevil
