--- a/ytube/_data/lists/seen-keys.yml
+++ b/ytube/_data/lists/seen-keys.yml
@@ -1,13 +1,21 @@
 --- 
 - X3qSHcbSnLU # Bitcoin and blockchain: global development game changers?
+- 54gwAHagA2U # 99 CHOSES QUI N’ARRIVENT QU’EN ALLEMAGNE | Lama Faché
+- rf9qK9QTlq0 # Tiwanaku / Pumapunku Megaliths are Artificial Geopolymers
 - UUDJoHeJbzw # Obviously I need another channel update
+- nuRuFj5c0bE # Why you are wrong about Universal Basic Income | The power of AI within the hands of the few
+- iNU895fTzSQ # "Getting Rich Is Easy" | START DOING THIS TODAY! Sadhguru
 - xS9ewBGdlQg # Obviously I need another channel update
+- qkN8gYXiXdI # Time & Space: Concept or Reality? Is Time Travel Really Possible ? || Sadhguru || Adiyogi
 - brhA0Gc3OIs # 10 Facts About Ashley Alban
 - oF1SUYhDjZ8 # THE UNIVERSE, THE MIND
+- GYQRVn8ttwM # "I Can Teach You How to Program The Subconscious Mind" - Dr. Bruce Lipton - An Eye Opening Speech
+- z7zLh3k2hrA # Pourquoi j'ai arrêté le porno (conférence)
 - hGyeo8dihq8 # Un Prof Français révèle un vieux secret qui dirige le Monde!!
 - cxdwEOpGknk # Emily Browning - Sweet Dreams
 - O6xWhWnI6t4 # LIVING WATERS: Sound Frequencies & CYMATICS
 - 7wCFo1G-pP0 # 5G The Elephant in Your Living Room (via: thecrowhouse)
+- aF9iC2SjBhw # IDRISS ABERKANE - LA GRATITUDE VA SAUVER NOTRE MONDE
 - fIm9bwxkgpw
 - K-Kd14lwuyI # 1 Hour of Beautiful Celtic Fantasy Music | The Dream Weaver
 - ahjSt68Rtvc
@@ -24,6 +32,7 @@
 - WGTxqhSN8bE # Estas Tonne - Internal Flight
 - PfEWKwsagkI # BOND - live from the Royal Albert Hall.avi
 - cLu9GmV2vF0 # Didgeridoo Meets Orchestra
+- H4Jmx684klg # Révélations à Tiwanaku / Puma Punku : Présence de géopolymères
 - -FqnsqNlExw # ΜΑΥΡΟ ΚΟΚΚΙΝΟ tango version
 - 1-hphxgC8Ns # Where did humans come from?  New Documentary 2017
 - YSPSHT8xLos # t.A.T.u. - «Not Gonna Get Us» live: 10th Anniversary (2003-2013)
@@ -2060,5 +2069,6 @@
 - LKLVGXXYJ0 # Lady Gaga - John Wayne
 - Hwom46OTKbY # ILS VEULENT QUE VOUS RESTIEZ PAUVRE
 - l71HR9F5Hoc # Trump explodes at Reuters reporter asking about Ukraine
+- vEfXK3D8vGc # The Healing Power of Gratitude - Bruce Lipton Explains Telomeres
 - pmBiw2yCbdw # Elvellon - Born From Hope (Official Video) HD
 - aySea-YvWHk # Within Temptation - M&#39;era Luna Festival 2016 (Full Show) HD
