--- a/ytube/_data/lists/sex-keys.yml
+++ b/ytube/_data/lists/sex-keys.yml
@@ -9,3 +9,5 @@
 - q4zmeFYuP9M # What is healthy sexuality? An interview with Teal Swan
 - WAnT19pInWc # Squirting - 5 Myths Finally Busted
 - YZ5gk7X1uTE # How Long Does Intercourse Normally Last?
+- Gz4GjOowbM0 # Comment surprendre UNE FEMME SEXUELLEMENT ?? 🎬💋
+- z7zLh3k2hrA # Pourquoi j'ai arrêté le porno (conférence)
