--- a/ytube/_data/lists/talents-keys.yml
+++ b/ytube/_data/lists/talents-keys.yml
@@ -21,6 +21,7 @@
 - wgLUCVRnRS8 # THE MOST BEAUTIFUL VOICES IN THE WORLD #1
 - zSmbM3aa3hs # Coluche - Les hommes politiques
 - 44jyecSwdlE # Dimash Kudaibergen - S.O.S d&#39;un terrien en détresse / Live dans Les Années Bonheur
+- GmnfC3Q1wQg # Lena Woods Million Reasons @ Le Pélican 2019
 - sgdRoBluNPk # Best damn female guitar players I have ever seen! INCREDIBLE !
 - vrn6sx1g0vc # Best of ADELE COVER on Got Talent and X Factor
 - 6YV7W9Pk6Es # Shocking! You Will Never Expect What These Bro &amp; Sis Will Do! Roller Daredevils!
