--- a/ytube/_data/lists/trance-keys.yml
+++ b/ytube/_data/lists/trance-keys.yml
@@ -29,6 +29,7 @@
 - 0WI7En7heSA # [Trance] Female Vocal Trance (Voices in my Head) #108
 - L-dLPP8fuvk # Best Uplifting Vocal Trance Mix [HQ &amp; HD]
 - zIjPoj8a4Ko # Best of Vocal Trance Mix HD
+- UZxlKNwmJmA # Pryda - Project L.O.V.E (Original Mix)
 - T4fy_ynTK8s # &#39;200K Subscribers Special&#39; - Melodic Progressive House &amp; Trance Mix
 - aZ_YMK3M8RI # [Trance] Female Vocal Trance (Voices in my Head) #129
 - dXq4GcnShB8 # The Best of Emma Hewitt (Vocal Trance Mix)
