--- a/ytube/_data/lists/wierd-keys.yml
+++ b/ytube/_data/lists/wierd-keys.yml
@@ -1,7 +1,12 @@
 --- 
+- Rt3EAPDn-Ug # The Ultimate 432Hz VS 440Hz | CONSPIRACY + Comparison
+- H4Jmx684klg # Révélations à Tiwanaku / Puma Punku : Présence de géopolymères
 - HbAAwr8IaG4 # 12,000 Year Old Anunnaki Temple Discovery That Left Historians Speechless
 - _njz8-FHhAo # Malawi's Human Harvest - Full documentary - BBC Africa Eye
+- k0nOw_ebmGk # Building the Pyramids of Egypt with Artificial Stones
+- znQk_yBHre4 # How the pyramids where built in Egypt
 - t9OThVe92GI # Is Mahavatar Babaji still alive? Sadhguru reveals the TRUTH **RARE VIDEO**
+- V9PrKXZI_iw # How to analyze pyramid stones
 - YXxOgX05UpQ # SOPHIA: Sophia, Antichrist Spirit, Divine Feminine &amp; Gnosticism
 - W2Cv5hZfOmk # Siberian Cult Leader Thinks He's Jesus
 - TorPh4wpPSA # What You&#39;re About to See Should Scare You!
