--- a/ytube/_data/lists/wuotai-music-keys.yml
+++ b/ytube/_data/lists/wuotai-music-keys.yml
@@ -1,12 +1,19 @@
 --- 
 - s1SuqX3VKOU # נתנאל גולדברג - HOLY
+- hn10okvX19E # Bird's Teardrops - Peia Luzzi, Estas Tonne - Ashland, Oregon 2018
+- 9uaOhC98-jc # Om ahh hum by Jane Winther : unisound.dk
+- eJwSZIajEvI # Dhafer Youssef - Soupir Eternel
+- on1QEcz1sTI # London Grammar - Hey Now (Radio 1's Big Weekend 2014)
 - ausD8Z422as # Dhafer Youssef - Khira "Indicium Divinum" (Elegy for my mother)
+- hh7Rg_KymBw # Jane Winther - Echoes of Silence
 - q80V1yoZZRQ # Wind Chimes KOSHI Bells Infinite AIR Meditation - Whale Spirit | Calm
 - c4jgr8xz25Q # Estas Tonne : &quot;The Inside Movie&quot; Full track
 - qPCG2MSGpvc # Beautiful Kalimba/Mbira Meditation Music - Sleep and Relaxation Music | Calm 🎧
 - KYACIbIVIqc # Snatam Kaur ♫ Mantras for ♥♥ Divine Grace ☼ ♥♥
+- e6hEvSvpx7M # "Kiss the Earth" (La Luna) by Ajeet Kaur: Live in Amsterdam from the album 'Haseya'
 - GHw-_AqQ65M # AQQ_Kieszenie_www.aqq.prv.pl.avi
 - BSmToj9VZ4s # Deva Premal - Gayatri Mantra (2 hours)
+- Gq6Kx2mGC1k # Lokah Samastah ~Jane Winthers
 - iDss3NMAAKg # Oliver Shanti - Water (1 hour)
 - ZGe1wkBJE6E # Luna Deva &amp; Tombaba &amp; Pepe Danza - earthchild
 - 6rVPjrGT54U # Moon Chant
@@ -18,6 +25,7 @@
 - Nghtf_VP-tE # Yasmin Levy - Keter (Crown)
 - dso-munXLbY # Estas Tonne 2017 new concert full
 - Ix3yMWjjA0w # Best Sufi Meditation Music... Vol. I موسيقى صوفية
+- 1Fig-Ly4gI4 # Jane Winther - Yoga Music Collection - Blissfull Mantras - Om Mani Padme Hum 1
 - zHDrHRmaQjQ # Anilah - Medicine Chant
 - 5cV5DHaVKv4 # Byron Metcalf  - Heart Warriors
 - 0WcGL4CjqiI # Mumi - The Four Seasons: Summer
@@ -70,6 +78,7 @@
 - 2jiTi6W390M # SIGNS
 - 5WxKk3wUZvI # Freedom - Valdi Sabev
 - waldWijiQDs # Ken Hensley - Lady in Black
+- TO25_qAq8xI # Lisa Gerrard - Space Weaver
 - edBxC3oVNKQ # Impossible Shamanic Voice by Istvan Sky - Hungary
 - cLu9GmV2vF0 # Didgeridoo Meets Orchestra
 - imXJaLviREo # FUNNY ANIMALS: Try not to LAUGH - The FUNNIEST ANIMAL videos
@@ -82,11 +91,13 @@
 - zOvsyamoEDg # FAUN - Federkleid (Offizielles Video)
 - DGQ1kzBoImY # Tibetische Meditationsmusik, Entspannende Musikmeditation, Yoga, Binaurale Takte, ✿3186C
 - sTgElQpyrvY # Estas Tonne -  place of the Gods full album
+- zHDrHRmaQjQ # Anilah - Medicine Chant
 - XrX9nR6j9zw # Unser Highlight: Sound &amp; Silence Festival. Estas Tonne, Joseph Pepe Danza, Netanel Goldberg
 - BIRJMESl4U8 # 3 HOURS Relaxation Powerful Meditation | Tibetan Monks Chanting | Singing Bowls | Background Yoga
 - tByJMiQp-IM # Music to Cleanse of Negative Energy at Home Space.
 - bHAHxv5dWtY # Kalimba Playing &amp; Voice - Soothing Meditation Music | Calm &amp; El Grey - M¬el¬lo
 - 28wBrNjHXOM # Shamanic drum &amp; Didgeridoo Hypnotic Meditation music - 35min
 - szfu1DV3pR8 # Unveiled Mystery - Estas Tonne ‖ Netanel Goldberg ‖ Joseph Pepe Danza
+- -fsZcUhCDpE # Angèlia Grace – Time (Inception) by Hans Zimmer [cover]
 - hnXD6FRZtn0 # Skyrim - The Dragonborn Comes - Swedish Radio Symphony Orchestra / Sabina Zweiacker
 - Pj4q0Mc08EY # 2 HOURS Hypnotic SHAMANIC MEDITATION MUSIC Healing Music for the Soul, Tuvan Chakra Cleansing
