--- a/ytube/_data/ytube.yml
+++ b/ytube/_data/ytube.yml
@@ -1,14 +1,10 @@
---- 
-- fAqtI9XgQic # "Upside Down" tango scene
+--- # list of MikCol Tangos
 - 2cdel3vqSeI
-- bBmBE2XNWGo # bust your windows ★ Broken Tango ★ Jasmine Sullivan
-- 7cAbmaBHIFU # Derek Hough - Natural
 - 3t4zbAX-0XA # Tango Mi Amor - Lara Fabian.wmv
 - UiHmeHZAc0s # JT Coldfire - She&#39;s Crazy
 - M0x-NWrffx0 # I Hate You For It - Chad Brownlee (HD Uncut Version)
 - NxlP2msyhYE # Trio Garufa Tango Film: Gamulan
 - _uvE32Zbi8I # Bihter Behlul tango sahnesi  [ Forbidden Love Tango ]
-- ajA0sNkQJ_0 # Cher - Bang Bang (Rock Version)
 - Bkf9qqnu9cE # Neo Tango - C &amp; C - California Dreaming
 - fkLUBxLMMio # Laura Pergolizzi-Too Much
 - tyYG1k0f9mE # Tarrango_Club Des Belugas_Anne Schnell_Paintings
@@ -100,6 +96,7 @@
 - VHoT4N43jK8 # Stromae - Alors On Danse
 - EHZbeJ__1NE # Need You - Bosx1ne, JRoa, Skusta Clee, Emcee Rhenn, Flow-G, Bullet-D &amp; Kent MNL
 - uIWBgLaxq4E # Oriental Tango &quot;Desert Roses&quot; 24-06-2012
+- fAqtI9XgQi
 - EiyPRqP5glY # Transcendence Music Video - Lindsey Stirling
 - eSg9B_plTtA # GALLO CIEGO -  PUGLIESE
 - D5XhJ5cOjr0 # buddha bar-Secret love
@@ -145,4 +142,3 @@
 - x5SHpHDRtOc # Fifty Shades of Tango - The Weeknd Earned It - Argentine Tango Julia Juliati &amp; Ronny Dutra
 - R9cqYY19-6w # In the Mood for Love Soundtrack - YouTube
 - uJxs5SkSe7s # TANGUERA-Sexteto Mayor
-- o6SprGmHTy4
