--- a/ytube/_data/lists/spiritual-keys.yml
+++ b/ytube/_data/lists/spiritual-keys.yml
@@ -29,6 +29,7 @@
 - wTblbYqQQag # Jim Carrey  - What It All Means | One Of The Most Eye Opening Speeches
 - E-NKrv8YiWk # Nassim Haramein: A Human Being Is An Expression Of The Field
 - LXVrNRo1Zj8 # Alan Watts ~ Are You Tired Of Playing The Social Game?
+- I098n_9LPP4 # Ask Me Anything: Sadhguru
 - sBAYjJUtigY # Clif High: Temporal Awareness, Cryptocurrencies, The Yogi vs.The Bluebirds
 - iiIJOMU0a78 # How To Exit The Reincarnation System. Listen Carefully
 - ZJrHUiPUnog # UNSETTLING Discoveries That Might Change History
@@ -41,5 +42,6 @@
 - Mjwdn0XAjgk # Spiritual teacher tells all, before he dies. Incredible!
 - JnbCqSFzP_o # Radioscopie 1978   André Van Lysebeth
 - nRSBaq3vAeY # New Experiments Show Consciousness Affects Matter ~ Dean Radin, PhD
+- YZXPawOLGKc # Is mind reading possible ? | Swami Mukundananda & Sadhguru answer\
 - ZqTQqjelzwg # Breath Made Visible (Trailer)
 - 711VklH-4fA # 10 Times Michio Kaku Arguments Blew Our Minds
