--- a/ytube/_data/lists/healing-keys.yml
+++ b/ytube/_data/lists/healing-keys.yml
@@ -54,3 +54,4 @@
 - htCe7qytORQ # DARPAN - Accueillir une couche de peine (extrait)
 - wLBAuy619qw
 - GUbEgg6GklU # Gregg Braden, Bladder Cancer dissolves in less than 3 minutes using The Language of Emotion
+- -tOTX7oI5Vs # A Geometry of Consciousness -- The Pribram Bohm Hypothesis
