--- a/ytube/_data/lists/music-keys.yml
+++ b/ytube/_data/lists/music-keys.yml
@@ -1158,3 +1158,5 @@
 - nCw0wlv3pyQ # Caro Emerald - Mistaken identity
 - EZMOh9TglsI # Emeli Sandé - Hurts - Live at the BRIT Awards 2017
 - CC6vDsm1dXQ # Ella Henderson sings Evanescence&#39;s Bring Me To Life - Live Week 4 - The X Factor UK 2012
+- YFw4hlFSXe4 # Everybody's Gotta Learn Sometimes - Beck
+- 2FdP0eS47ts # Mazzy Star - Fade Into You - 10/2/1994 - Shoreline Amphitheatre (Official)
