--- a/ytube/_data/lists/tango-experimental-keys.yml
+++ b/ytube/_data/lists/tango-experimental-keys.yml
@@ -18,7 +18,7 @@
 - 1mB0tP1I-14 # Lady Gaga - LoveGame (Official Music Video)
 - c7PLgW7LwhU # Sia - Alive (The fifth wave movie)
 - pkeDBwsIaZw
-- IJzHSYjR0dE
+- IJzHSYjR0dE # Cigarettes After Sex - Affection (The Dreamers)
 - q0pdLCQy8l8 # ?list=PLw-VjHDlEOgvvecEeS-BC-qFhweKjZJ2I # Dynoro, Gigi D&#39;Agostino - In My Mind (Official Audio)
 - FTsRdZRwfJs # Sheryfa Luna - Égoïste (Clip officiel)
 - AzWDs26YL9Y # LoLa &amp; Hauser - Moonlight Sonata
