--- a/ytube/_data/lists/universe-keys.yml
+++ b/ytube/_data/lists/universe-keys.yml
@@ -19,3 +19,4 @@
 - fV5om86F-kM # A Quiet Place (2018) - Official Trailer - Paramount Pictures 2
 - 5sbrpxmq8yk # 5 Most Mysterious Sounds Recorded in Space
 - XBEQXgUyR2c # FRB 121102 Audio Analysis
+- PJEPhBL77lk # Yoshitaka Amano - his universe, on paper
