--- a/ytube/_data/lists/wierd-keys.yml
+++ b/ytube/_data/lists/wierd-keys.yml
@@ -1,4 +1,5 @@
 --- 
+- T6CxT4AESCQ # The Stunning link between Entropy, time & information
 - Rt3EAPDn-Ug # The Ultimate 432Hz VS 440Hz | CONSPIRACY + Comparison
 - H4Jmx684klg # Révélations à Tiwanaku / Puma Punku : Présence de géopolymères
 - HbAAwr8IaG4 # 12,000 Year Old Anunnaki Temple Discovery That Left Historians Speechless
@@ -116,3 +117,4 @@
 - KVz_bq7r3gA # Secrets of Occult Symbolism - NCR
 - sONLWHuYo7w # The Great Pyramid Mystery Has Finally Been Solved
 - 8W3y3Qh8R1s # BELIEVE YOUR OWN EYES -  9/11 -  “NO PLANES”
+- Gh-NdehdZfc # Man Predicts Future of the World - Streets of London - Episode 19
