--- a/ytube/_data/lists/science-keys.yml
+++ b/ytube/_data/lists/science-keys.yml
@@ -2,3 +2,5 @@
 - 658xlubwnDc # How Science is Taking the Luck out of Gambling - with Adam Kucharski
 - YR-l0b2iYy0 # Emily Levesque Public Lecture: The Weirdest Stars in the Universe: Emily Levesque Public Lecture
 - 3XWaRZf1A-Y # DNA Genesis - The Children Of Adam - National Geographic Documentary Films - Full HD Documentaries
+- T6CxT4AESCQ # The Stunning link between Entropy, time & information
+
